removed min files added link to google fonts

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <!--Compiled and minified Materialize CSS file-->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+         <!--Import Google Icon Font-->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <!--links to materialize's non min css in our folder-->
+        <link rel="stylesheet" href="assets/css/materialize.css">
         <!--CSS reset-->
         <link rel="stylesheet" href="assets/css/reset.css">
         <!--Our CSS file-->
@@ -19,8 +21,8 @@
 
         <img>
         
-        <!-- Compiled and minified Materialize JavaScript-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
+        <!-- links to materializes JavaScript that is not min thats in our folder-->
+        <script src="assets/javascript/materialize.js"></script>
         <!--JQUERY SCRIPT-->
         <script src="https://code.jquery.com/jquery.js"></script>
         <!--Our javascript file-->
