--- a/index.html
+++ b/index.html
@@ -4,19 +4,43 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <!--Compiled and minified Materialize CSS file-->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
         <!--CSS reset-->
         <link rel="stylesheet" href="assets/css/reset.css">
+        <!--Compiled and minified Materialize CSS file-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
         <!--Our CSS file-->
         <link rel="stylesheet" href="assets/css/style.css">
         <title>Seeker: Who Do You Seek?</title>
     </head>
   
     <body>
-    
-        <h1></h1>
 
+        <h1></h1>
+        <div class="row">
+            <div class="col s8">
+                <div class="divider"></div>
+                <div class="section">
+                    <h5>Section 1</h5>
+                    <p>Stuff</p>
+                </div>
+                <div class="divider"></div>
+                <div class="section">
+                    <h5>Section 2</h5>
+                    <p>Stuff</p>
+                </div>
+                <div class="divider"></div>
+                <div class="section">
+                    <h5>Section 3</h5>
+                    <p>Stuff</p>
+                </div>
+            </div>
+            <div class="col s4">
+                <div class="section">
+                    <p>this is where the news is</p>
+                    <p>NEWS</p>
+                </div>
+            </div>
+        </div>
         <img>
         
         <!-- Compiled and minified Materialize JavaScript-->
