--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <link rel="stylesheet" href="assets/css/style.css">
         <title>Seeker: Who Do You Seek?</title>
     </head>
-  
+
+ </div>
     <body>
 
         <h1></h1>
