--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             </div>
         </div>
         <img>
+        <span></span>
         
         <!-- links to materializes JavaScript that is not min thats in our folder-->
         <script src="assets/javascript/materialize.js"></script>
