commit before pull

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
  </div>
     <body>
         <div class="mainlogo center-align">
-            <img src="assets/Images/logo.JPG" style="height:300px">
+            <img src="assets/Images/logoside.jpg" style="height:300px">
         </div>
         <div class="row container">
             <form class="col s12">
