--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
     <!-- This is the main div for the front page search -->
  </div>
     <body>
+        <!-- Here is the picture of the logo above the search bar -->
         <div class="mainlogo center-align">
             <img src="assets/Images/logoside.JPG" style="height:300px">
         </div>
+        <!-- Here is the search bar  -->
         <div class="row container">
             <form class="col s12">
                 <div class="row">
@@ -44,6 +46,7 @@
                 </div>
             </form>
         </div>
+        <!-- Here is some sample layouts -->
         <div class="row">
             <div class="col s8">
                 <div class="divider"></div>
@@ -70,7 +73,7 @@
             </div>
         </div>
         <img>
-        
+        <!-- Here is the footer -->
         <footer class="page-footer mainfooter">
             <div class="row">
                 <div class= "col s4">
@@ -78,7 +81,7 @@
                     <a class="grey-text text-lighten-4 left" href="#!">Business</a>
                 </div>
                 <div class= "col s4">
-                    <a class="grey-text text-lighten-4 center-align" href="#!">© 2018 Copyright</a>
+                    <a class="grey-text text-lighten-4 center" href="#!">© 2018 Copyright</a>
                 </div>
                 <div class= "col s4">
                     <a class="grey-text text-lighten-4 right" href="#!">Privacy</a>
