--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
         </nav>
     <!-- This is the main div for the front page search -->
  </div>
-    <body>
         <!-- Here is the picture of the logo above the search bar -->
         <div class="mainlogo center-align">
             <img src="assets/Images/logoside.JPG" style="height:300px">
@@ -75,7 +74,7 @@
         <img>
         <!-- Here is the footer -->
         <footer class="page-footer mainfooter">
-            <div class="row">
+            <div class="row" id= "clearmargins">
                 <div class= "col s4">
                     <a class="grey-text text-lighten-4 left" href="#!">Advertising</a>
                     <a class="grey-text text-lighten-4 left" href="#!">Business</a>
