--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="row container">
             <form class="col s12">
                 <div class="row">
-                    <div class="input-field col s12">
+                    <div class="input-field col s12" id="searchBar">
                         <i class="material-icons prefix">search</i>
                         <input id="icon_prefix" type="text" class="validate">
                         <label for="icon_prefix">Who Do You Seek?</label>
