--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                     <a class="grey-text text-lighten-4 left" href="#!">Advertising</a>
                     <a class="grey-text text-lighten-4 left" href="#!">Business</a>
                 </div>
-                <div class= "col s4">
-                    <a class="grey-text text-lighten-4 center" href="#!">© 2018 Copyright</a>
+                <div class= "col s4 center-align">
+                    <a class="grey-text text-lighten-4" href="#!">© 2018 Copyright</a>
                 </div>
                 <div class= "col s4">
                     <a class="grey-text text-lighten-4 right" href="#!">Privacy</a>
