--- a/index.html
+++ b/index.html
@@ -17,24 +17,13 @@
         <title>Seeker: Who Do You Seek?</title>
     </head>
   
-    <body>
-        <!-- Here is the Front Page Nav Bar -->
-        <nav>
-            <div class="nav-wrapper">
-                <a href="#" class="brand-logo left">Logo eyes here</a>
-                    <ul id="nav-mobile" class="right hide-on-med-and-down">
-                        <li><a href="sass.html">Trending Now</a></li>
-                    </ul>
-            </div>
-        </nav>
-    <!-- This is the main div for the front page search -->
- </div>
-
+    <body> 
         <!-- Here is the picture of the logo above the search bar -->
         <div class="mainlogo center-align">
             <img src="assets/Images/logoside.JPG" style="height:300px">
         </div>
         <!-- Here is the search bar  -->
+        <br>
         <div class="row container">
             <form class="col s12">
                 <div class="row">
@@ -42,6 +31,11 @@
                         <i class="material-icons prefix">search</i>
                         <input id="icon_prefix" type="text" class="validate">
                         <label for="icon_prefix">Who Do You Seek?</label>
+                        <div class="center-align">
+                        <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+                            <i class="material-icons right">send</i>
+                        </button>
+                        </div>
                     </div>
                 </div>
             </form>
@@ -88,9 +82,8 @@
                     <a class="grey-text text-lighten-4 right" href="#!">Terms</a>
                     <a class="grey-text text-lighten-4 right" href="#!">Settings</a>
                 </div>
-              </div>
-          </footer>
-
+            </div>
+        </footer>
         <!-- links to materializes JavaScript that is not min thats in our folder-->
         <script src="assets/javascript/materialize.js"></script>
         <!--JQUERY SCRIPT-->
