--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!--linked to fonts-->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <!--linked to Materialize CSS file-->
-        <link rel="stylesheet" href="assets/css/materialize.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
         <!--Our CSS file-->
         <link rel="stylesheet" href="assets/css/style.css">
         <title>Seeker: Who Do You Seek?</title>
