this commit includes changes to the index page

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
   
     <body>
     
-        <!-- Here is the picture of the logo above the search bar -->
+        <!--SEEKER Main Logo -->
         <div class="mainlogo center-align">
             <img src="assets/Images/logoside.JPG" style="height:300px">
         </div>
         
-        <!-- Here is the search bar  -->
+        <!--Search Bar!-->
         <div class="row container">
             <form class="col s12">
                 <div class="row">
