color of footer

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
 
         <!-- Here is the footer -->
-        <footer class="page-footer mainfooter">
+        <footer class="page-footer mainfooter indigo darken-4">
 
             <div class="row" id= "clearmargins">
                 
