changed advertising page

--- a/Advertising.html
+++ b/Advertising.html
@@ -19,11 +19,37 @@
 
     <body>
     
-        <!-- Here is the picture of the logo above the search bar -->
+        <!-- Here is the picture of the logo -->
         <div class="mainlogo center-align">
             <img src="assets/Images/logoside.JPG" style="height:300px">
         </div>
 
+        <!-- Here is the content of the ad page -->
+        <div class="row center-align">
+            
+            <div class="col">
+                <div class="divider"></div>
+                <div class="section">
+                    <h5>Why Advertise with Seeker?</h5>
+                    <p>We are leading the cutting edge research on seeking celebrity activity, there is no other site like ours!
+                        By advertising with us, we can bring in millions in revenue and bring your brand to the forefront of the news!
+                    </p>
+                    <br>
+
+                    <p>You only pay for results. Once you've seen the results we bring, you shal be happy
+                    </p>
+                </div>
+                <div class="divider"></div>
+                <div class="section">
+                    <h5>Current Clients</h5>
+                    <p>Our current Advertisees include APPLE, GOOGLE, TWITTER, STARBUCKS, RALPHS, and THE POPE
+                    </p>
+                    <br>
+                    <p>Join them now in getting your name OUT THERE!!!</p>
+                </div>
+                <div class="divider"></div>
+
+        </div>
 
         <!-- Here is the footer -->
         <footer class="page-footer mainfooter">
