added all linked pages

--- a/Advertising.html
+++ b/Advertising.html
@@ -19,15 +19,17 @@
 
     <body>
     
-        <!-- Here is the picture of the logo -->
+        <!--SEEKER Main Logo -->
         <div class="mainlogo center-align">
-            <img src="assets/Images/logoside.JPG" style="height:300px">
+                <a href="index.html">
+                        <img src="assets/Images/logoside.JPG" style="height:300px">
+                      </a>
         </div>
 
         <!-- Here is the content of the ad page -->
         <div class="row center-align">
             
-            <div class="col">
+            <div class="col12">
                 <div class="divider"></div>
                 <div class="section">
                     <h5>Why Advertise with Seeker?</h5>
