--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     
         <!--SEEKER Main Logo -->
         <div class="mainlogo center-align">
-            <img src="assets/Images/logoside.JPG" style="height:300px">
+                <a href="index.html">
+                        <img src="assets/Images/logoside.JPG" style="height:300px">
+                      </a>
         </div>
         
         <!--Search Bar!-->
