updated logos on all pages for better resolution

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!--SEEKER Main Logo -->
         <div class="mainlogo center-align">
                 <a href="index.html">
-                        <img src="assets/Images/logoside.JPG" style="height:300px">
+                        <img src="assets/Images/logo.JPG" style="height:300px">
                       </a>
         </div>
         
