--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                 <div class="row">
                     <div class="input-field col s12" id="searchBar">
                         <i class="material-icons prefix">search</i>
-                        <input id="icon_prefix" type="text" class="validate">
+                        <input id="icon_prefix" type="text" class="validate searchInput">
                         <label for="icon_prefix">Who Do You Seek?</label>
                         <!--Submit Button-->
                         <div class="center-align">
-                            <button class="btn waves-effect waves-light red darken-2" type="submit" name="action">Submit
+                            <button class="btn waves-effect waves-light red darken-2 searchButton" type="submit" name="action">Submit
                                 <i class="material-icons right">send</i>
                             </button>
                         </div>
