added jquery to move logo and search bar upon pressing submit button

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         <!--SEEKER Main Logo -->
         <div class="mainlogo center-align">
                 <a href="index.html">
-                        <img src="assets/Images/logo.JPG" style="height:300px">
+                        <img src="assets/Images/logo.JPG" class="logoimage responsive-img">
                       </a>
         </div>
         
         <!--Search Bar!-->
         <div class="row container">
-            <form class="col s12">
+
                 <div class="row">
                     <div class="input-field col s12" id="searchBar">
                         <i class="material-icons prefix">search</i>
