lowercased i in IMAGES so that it will show up in web

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!--SEEKER Main Logo -->
         <div class="mainlogo center-align">
                 <a href="index.html">
-                        <img src="assets/Images/logo.JPG" class="logoimage responsive-img">
+                        <img src="assets/images/logo.JPG" class="logoimage responsive-img">
                       </a>
         </div>
         
