--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <!--SEEKER Main Logo -->
         <div class="mainlogo center-align">
                 <a href="index.html">
+                    <!-- FYI to everyone, images must be lower cased for github to show it -->
                         <img src="assets/images/logo.JPG" class="logoimage responsive-img">
                       </a>
         </div>
