google images search added - beta

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     
         <!--SEEKER Main Logo -->
         <div class="mainlogo center-align">
-                <a href="index.html">
-                        <img src="assets/Images/logo.JPG" style="height:300px">
-                      </a>
+            <a href="index.html">
+                <img class = "responsive-img" src="assets/Images/logo.JPG" style="height:300px">
+            </a>
         </div>
         
         <!--Search Bar!-->
@@ -56,8 +56,8 @@
                 </div>
                 <div class="divider"></div>
                 <div class="section" id="googleImage">
-                    <h5>Section 2</h5>
-                    <p>Stuff</p>
+                    <div id="imgHeader">Section 2</div>
+                    <div id="googleImages"></div>
                 </div>
                 <div class="divider"></div>
                 <div class="section">
