--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="row ">
                     <div class="input-field col s12 " id="searchBar">
                         <i class="material-icons prefix">search</i>
-                        <input id="icon_prefix" type="text" class="validate searchInput white">
+                        <input id="icon_prefix" type="text" class="searchInput white">
                         <label for="icon_prefix">Who Do You Seek?</label>
                         <!--Submit Button-->
                         <div class="center-align">
