this commit removed the extraneous p tags and relevant content so that the front page looks empty until user makes a search

--- a/index.html
+++ b/index.html
@@ -51,26 +51,14 @@
             
             <div class="col s8">
                 <div class="divider"></div>
-                <div class="section" id="OMDB">
-                    <h5>Section 1</h5>
-                    <p>Stuff</p>
-                </div>
-                <div class="divider"></div>
                 <div class="section" id="googleImage">
-                    <div id="imgHeader">Section 2</div>
+                    <div id="imgHeader"></div>
                     <div id="googleImages"></div>
-                </div>
-                <div class="divider"></div>
-                <div class="section">
-                    <h5>Section 3</h5>
-                    <p>Stuff</p>
                 </div>
             </div>
 
             <div class="col s4">
                 <div class="section" id="theNews">
-                    <p>this is where the news is</p>
-                    <p>NEWS</p>
                 </div>
             </div>
 
