--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             </div>
 
             <div class="col s4">
+                <div class= "divider"></div>
                 <div class="section" id="theNews">
                 </div>
             </div>
