update just to pull from master

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="divider"></div>
                 <div class="section" id="googleImage">
-                    <div id="imgHeader">Section 2</div>
+                    <div id="imgHeader"></div>
                     <div id="googleImages"></div>
                 </div>
                 <div class="divider"></div>
