this commit includes an update for the youtube API

--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
                 </div>
             </div>
 
+            <div class="col s8">
+                <div class="divider"></div>
+                <div class="section" id="youTube">
+                    <div id="ytHeader"></div>
+                </div>
+            </div>
+
             <div class="col s4">
                 <div class= "divider"></div>
                 <div class="section" id="theNews">
