--- a/index.html
+++ b/index.html
@@ -55,10 +55,12 @@
                     <div id="imgHeader"></div>
                     <div id="googleImages"></div>
                 </div>
-                
+
                 <div class="divider"></div>
+
                 <div class="section" id="youTube">
                     <div id="ytHeader"></div>
+                    <div id="ytContent"></div>
                 </div>
             </div>
 
